code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_11.wast
(assert_invalid
  (module (func $type-unconsumed-poly0 (unreachable) (select)))
  "type mismatch"
)